Define int test vars in CI file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,6 +156,10 @@ integration-tests:
     - ./teardown.sh
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  variables:
+    FILEWRITER_ZOOKEEPER_CONTAINER_NAME: zookeeper-$CI_JOB_ID
+    FILEWRITER_KAFKA_CONTAINER_NAME: kafka-$CI_JOB_ID
+    FILEWRITER_FILEWRITER_CONTAINER_NAME: filewriter-$CI_JOB_ID
   dependencies:
     - archive
   artifacts:
