Replace missing vars

--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - frontend
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT: ${FILEWRITER_ZOOKEEPER_CONTAINER_NAME:-zookeeper}:2181
       KAFKA_BROKER_ID: 0
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
