--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,8 +161,8 @@ integration-tests:
     FILEWRITER_ZOOKEEPER_CONTAINER_NAME: zookeeper-$CI_JOB_ID
     FILEWRITER_KAFKA_CONTAINER_NAME: kafka-$CI_JOB_ID
     FILEWRITER_FILEWRITER_CONTAINER_NAME: filewriter-$CI_JOB_ID
-    http_proxy: http://172.20.72.11:8888
-    https_proxy: http://172.20.72.11:8888
+    HTTP_PROXY: http://172.20.72.11:8888
+    HTTPS_PROXY: http://172.20.72.11:8888
   dependencies:
     - archive
   artifacts:
