--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,8 +161,8 @@ integration-tests:
     FILEWRITER_ZOOKEEPER_CONTAINER_NAME: zookeeper-$CI_JOB_ID
     FILEWRITER_KAFKA_CONTAINER_NAME: kafka-$CI_JOB_ID
     FILEWRITER_FILEWRITER_CONTAINER_NAME: filewriter-$CI_JOB_ID
-    HTTP_PROXY: http://172.20.72.11:8888
-    HTTPS_PROXY: http://172.20.72.11:8888
+    HTTP_PROXY: $ESS_HTTP_PROXY
+    HTTPS_PROXY: $ESS_HTTP_PROXY
   dependencies:
     - archive
   artifacts:
