--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,9 @@
 repos:
-- repo: https://github.com/ambv/black
-  rev: 23.3.0
+- repo: local
   hooks:
   - id: black
-    language_version: python3
-
+    name: black
+    entry: black
+    language: system
+    types_or: [python, pyi]
+    require_serial: true
