--- a/integration-tests/requirements.txt
+++ b/integration-tests/requirements.txt
@@ -3,6 +3,6 @@ pytest>=6.2.2
 confluent_kafka == 1.9.2
 h5py>=3.1.0
 flatbuffers>=1.12
-black==19.3b0
 ess-streaming_data_types>=0.21.0
 file-writer-control>=1.2.5
+black==24.2.0
