--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,10 @@ clang-format:
 black:
   extends: .check
   script:
-    - python3 -m black --version
-    - python3 -m black --check integration-tests
+    - python3 -m venv .venv
+    - .venv/bin/python -m pip install -r integration-tests/requirements.txt
+    - .venv/bin/python -m black --version
+    - .venv/bin/python -m black --check integration-tests
 
 cppcheck:
   extends: .check
