remove stream controller tests as they don't test anything

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ if(SANITIZER STREQUAL "thread")
   set(SANITIZE_PARAMS "-fsanitize=thread")
 elseif(SANITIZER STREQUAL "address")
   message(STATUS "Address sanitizer selected")
-  set(SANITIZE_PARAMS "-fsanitize=address,undefined -g")
+  set(SANITIZE_PARAMS "-fsanitize=address,undefined -fno-omit-frame-pointer -g")
 elseif(SANITIZER STREQUAL "none")
   message(STATUS "No sanitizer selected")
   set(SANITIZE_PARAMS "")
