put versioning back in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,9 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 
 include(${SRC_CMAKE_MODULE_PATH}/Versioning.cmake)
 set_version()
-set(VERSION_INCLUDE_DIR ${CMAKE_BINARY_DIR}/version)
 create_version_header(
   ${SRC_CMAKE_MODULE_PATH}/templates/Version.h.in
-  ${VERSION_INCLUDE_DIR}/Version.h
+  ${PROJECT_SOURCE_DIR}/src/Version.h
 )
 
 # Extra warnings and treat warnings as errors
