added the sanitizers back in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,23 @@ else()
   message(FATAL_ERROR "Unrecognised option for CONAN, use AUTO, MANUAL or DISABLE")
 endif()
 
+set(SANITIZER "none" CACHE STRING "Sanitizer used to compile code with")
+set_property(CACHE SANITIZER PROPERTY STRINGS none address thread)
+if(SANITIZER STREQUAL "thread")
+  message(STATUS "Thread sanitizer selected")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread -g")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=thread -g")
+  set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fsanitize=thread -g")
+elseif(SANITIZER STREQUAL "address")
+  message(STATUS "Address sanitizer selected")
+  set(SANITIZE_PARAMS "-fsanitize=address,undefined -fno-omit-frame-pointer -g")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined -fno-omit-frame-pointer -g")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address,undefined -fno-omit-frame-pointer -g")
+  set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fsanitize=address,undefined -fno-omit-frame-pointer -g")
+else()
+  message(FATAL_ERROR "Unknown sanitizer (${SANITIZER}) selected.")
+endif()
+
 add_subdirectory(src)
 add_subdirectory(apps)
 add_subdirectory(tests)
