--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,8 @@ endif()
 
 set(SANITIZER "none" CACHE STRING "Sanitizer used to compile code with")
 set_property(CACHE SANITIZER PROPERTY STRINGS none address thread)
-if(SANITIZER STREQUAL "thread")
+if(SANITIZER STREQUAL "none")
+elseif(SANITIZER STREQUAL "thread")
   message(STATUS "Thread sanitizer selected")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread -g")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=thread -g")
