put docs back in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,3 +74,9 @@ endif()
 add_subdirectory(src)
 add_subdirectory(apps)
 add_subdirectory(tests)
+
+option(RUN_DOXYGEN "Run doxygen" TRUE)
+if (RUN_DOXYGEN)
+  configure_file(Doxygen.conf dg.conf)
+  add_custom_target(docs COMMAND doxygen "${PROJECT_BINARY_DIR}/dg.conf" WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+endif()
