--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,8 +117,7 @@ build-alt-distro:
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-$DISTRO-build-node:latest
   script:
     - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
-    - $SCL ninja all UnitTests
-    - $SCL sh activate_run.sh
+    - $SCL ninja all UnitTests docs
     - ./bin/UnitTests
   parallel:
     matrix:
