--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,9 +117,10 @@ build-alt-distro:
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-$DISTRO-build-node:latest
   script:
     - $SCL cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
-    - $SCL ninja all UnitTests
-    - ./bin/UnitTests
+    - $SCL ninja
     - ./bin/kafka-to-nexus --version
+    - ./bin/UnitTests
+
   parallel:
     matrix:
       - DISTRO:
