--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,3 +3,6 @@ target_link_libraries(kafka-to-nexus PRIVATE filewriter_lib ${CONAN_LIBS})
 
 add_executable(file-maker ${sources} file-maker.cpp)
 target_link_libraries(file-maker PRIVATE filewriter_lib ${CONAN_LIBS})
+
+add_executable(template-maker ${sources} template-maker.cpp)
+target_link_libraries(template-maker PRIVATE filewriter_lib ${CONAN_LIBS})
