added test file

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,6 +26,7 @@ set(UnitTests_SRC
         MasterTests.cpp
         HDFFileAttributesTests.cpp
         JsonTests.cpp
+        JsonToFlatbuffersTests.cpp
         ProducerTests.cpp
         ConsumerTests.cpp
         CommandSystem/CommandListenerTests.cpp
