--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ domain_tests:
     - $SCL python -m venv venv
     - source venv/bin/activate
     - python -m pip install -r requirements.txt
-    - pytest --file-maker-binary=../kafka-to-nexus --junitxml=DomainTestsOutput.xml
+    - pytest --file-maker-binary=../bin/kafka-to-nexus --junitxml=DomainTestsOutput.xml
   artifacts:
     when: always
     paths:
