--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -118,6 +118,8 @@ build-release:
 domain_tests:
   extends: .build
   image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
+  dependencies:
+    - build
   variables:
     SCL: scl enable devtoolset-11 rh-python38 --
   before_script:
