oops - should be using file-maker

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,7 +130,7 @@ domain_tests:
     - $SCL python -m venv venv
     - source venv/bin/activate
     - python -m pip install -r requirements.txt
-    - pytest --file-maker-binary=../build/bin/kafka-to-nexus --junitxml=DomainTestsOutput.xml
+    - pytest --file-maker-binary=../build/bin/file-maker --junitxml=DomainTestsOutput.xml
   artifacts:
     when: always
     paths:
