Convert some of the integration tests to domain tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ stages:
   - check
   - build
   - archive
+  - domain
   - integration
   - release
 
@@ -30,8 +31,10 @@ black:
   script:
     - python3 -m venv .venv
     - .venv/bin/python -m pip install -r integration-tests/requirements.txt
+    - .venv/bin/python -m pip install -r domain-tests/requirements.txt
     - .venv/bin/python -m black --version
     - .venv/bin/python -m black --check integration-tests
+    - .venv/bin/python -m black --check domain-tests
 
 cppcheck:
   extends: .check
@@ -112,6 +115,28 @@ build-release:
       - build/licenses
     reports:
       junit: build/test-output.xml
+
+domain_tests:
+  stage: domain
+  image: registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-build-node:latest
+  dependencies:
+    - build-release
+  variables:
+    SCL: scl enable devtoolset-11 rh-python38 --
+  before_script:
+    - ls
+    - cd domain-tests
+  script:
+    - $SCL python -m venv venv
+    - source venv/bin/activate
+    - python -m pip install -r requirements.txt
+    - pytest --file-maker-binary=../build/bin/file-maker --junitxml=DomainTestsOutput.xml
+  artifacts:
+    when: always
+    paths:
+      - domain-tests/DomainTestsOutput.xml
+    reports:
+      junit: Domain-tests/DomainTestsOutput.xml
 
 build-alt-distro:
   extends: .build
