--- a/integration-tests-2/docker-compose.yml
+++ b/integration-tests-2/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_MESSAGE_MAX_BYTES: 10000000
       KAFKA_BROKER_ID: 0
-      KAFKA_CREATE_TOPICS: "local_filewriter_pool:1:1,local_filewriter_status:1:1,instrument_topic:1:1,f144_data:1:1,ev44_data:3:1"
+      KAFKA_CREATE_TOPICS: "local_filewriter_pool:1:1,local_filewriter_status:1:1,local_filewriter:1:1,f144_data:1:1,local_detector:3:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
